--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="./assets/javascript/app.js"></script>
+    
 
     <title>Sam L Jackson Trivia Game!</title>
 </head>
@@ -30,143 +30,21 @@
 
         <!-- Trivia game questions -->
 
-        <!-- Question 1 -->
-        <div id="a-q">
-
-            <div class="row">
-                <div class="col-md-12 q-one questions">
-                    <h2></h2>
-                    <div class="row">
-                        <div class="col-md-3">
-                            <p class="one-1"></p>
-                        </div>
-
-                        <div class="col-md-3">
-                            <p class="one-2"></p>
-                        </div>
-
-                        <div class="col-md-3">
-                            <p class="one-3"></p>
-                        </div>
-
-                        <div class="col-md-3">
-                            <p class="one-4"></p>
-                        </div>
-                    </div>
-                </div>
+        <!-- Questions -->
+        <div id="quiz">
+            <div class="col-md-12 text-center q-one questions ">
+                <h2></h2>
+                <p></p>
             </div>
 
-            <!-- Question 2 -->
-
-            <div class="row">
-                <div class="col-md-12 q-two questions">
-                    <h2></h2>
-                    <div class="row">
-                        <div class="col-md-3">
-                            <p class="two-1"></p>
-                        </div>
-
-                        <div class="col-md-3">
-                            <p class="two-2"></p>
-                        </div>
-
-                        <div class="col-md-3">
-                            <p class="two-3"></p>
-                        </div>
-
-                        <div class="col-md-3">
-                            <p class="two-4"></p>
-                        </div>
-                    </div>
-                </div>
+            <div class="col-md-12 text-center correct questions ">
             </div>
 
-            <!-- Question 3 -->
-
-            <div class="row">
-                <div class="col-md-12 q-three questions">
-                    <h2></h2>
-                    <div class="row">
-                        <div class="col-md-3">
-                            <p class="three-1"></p>
-                        </div>
-
-                        <div class="col-md-3">
-                            <p class="three-2"></p>
-                        </div>
-
-                        <div class="col-md-3">
-                            <p class="three-3"></p>
-                        </div>
-
-                        <div class="col-md-3">
-                            <p class="three-4"></p>
-                        </div>
-                    </div>
-                </div>
+            <div class="col-md-12 text-center wrong questions ">
             </div>
 
-            <!-- Question 4 -->
-
-            <div class="row">
-                <div class="col-md-12 q-four questions">
-                    <h2></h2>
-                    <div class="row">
-                        <div class="col-md-3">
-                            <p class="four-1"></p>
-                        </div>
-
-                        <div class="col-md-3">
-                            <p class="four-2"></p>
-                        </div>
-
-                        <div class="col-md-3">
-                            <p class="four-3"></p>
-                        </div>
-
-                        <div class="col-md-3">
-                            <p class="four-4"></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Question 5 -->
-
-            <div class="row">
-                <div class="col-md-12 q-five questions">
-                    <h2></h2>
-                    <div class="row">
-                        <div class="col-md-3">
-                            <p class="five-1"></p>
-                        </div>
-
-                        <div class="col-md-3">
-                            <p class="five-2"></p>
-                        </div>
-
-                        <div class="col-md-3">
-                            <p class="five-3"></p>
-                        </div>
-
-                        <div class="col-md-3">
-                            <p class="five-4"></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
-
-
-
-
-
-
-
-
-
-
-    </div>
+        <script src="./assets/javascript/app.js"></script>
 
 </body>
 
